--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -39,3 +39,30 @@
     font-weight: bold;
     color: #007bff;
   }
+  .icon-click{
+    font-size: 22px;
+    cursor: pointer;
+  }
+  h1 {
+    font-size: 26px;
+    font-weight: bold;
+    color: #2b2b2b;
+    text-align: center;
+    border-bottom: 3px solid #42a4eb;
+    padding-bottom: 10px;
+    margin-bottom: 30px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+  }
+
+  /* Responsive styles for smaller screens */
+  @media screen and (max-width: 480px) {
+    h1 {
+      font-size: 24px;
+      margin-bottom: 20px;
+    }
+    .header-container {
+      padding: 10px;
+    }
+  }
